Hospital app: role-based access, patient portal link, invoice-appointment, CORS, Docker, tests
Made-with: Cursor